2007-08-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* javaws related changes from Ulf
	* fix bug were instances couldn't be named after their template
	* allow for ESSources / ESModules to be renamed in the GUI
	* db schema (Oracle only): create an index for each foreign key
	(which isn't a primary key). 

2007-08-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* db schema changes: allow string parameter values with up to 1024
	characters; remove "NOT NULL" constraint for column 'name' of
	tables 'ParameterSets' and 'VecParameterSets', as both can be
	unnamed, and Oracle interprets '' as NULL.
	* remove 'ValidatedNameDialog': if a Path / Sequence / Module /
	ESSource / ESModule is instantiated, the label name is entered via
	editing the tree node of the new instance. 
	* fix ReleaseMigrator: ESModule migration, order of references in
	path/sequence
	* introduce 'ConfigurationTreeActions', which is a repository for
	all interactive user actions on the tree / configuration. Used by
	ConfigurationTreeMouseListener and
	ConfigurationTreeTransferHandler mostly.

2007-08-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-02
	* add file chooser dialogs to be shown via the buttons on the
	converter pane to choose output cfg file name, input root
	file/list, and output root file.

2007-08-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* fix bug regarding db storage of paths the content of which has
	changed w.r.t. the last db version
	* fix directory tree view to appropriately enable/disable the OK
	button. The user can't press OK anymore while editing the name of
	a new directory
	* make all popup submenus scrollable
	* the process is now editable in the configuration panel (upper
	left)

2007-08-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* db schema change: add field 'processName' to table
	'Configurations'